--- a/index.html
+++ b/index.html
@@ -19,32 +19,35 @@
         <a href="https://facebook.com">facebook</a>
       </nav>
     </header>
-    <main>
-      <h1>Raila Oliech | WDD 130</h1>
-      <img src="images/profile.jpg" alt="Hello, my name is Raila Oliech " width="200">
-      <p>Hello! My name is Raila Oliech and I am from Nairobi, Kenya. I enjoy eating fish and
-         eggs. I'm working as the assistant clerk at Kosiga company and i love my job. When
-         I have free time, I like reading, I like all types of books, but now I´m reading about
-         health, positive psychology, spirituality and neuroscience. I also like doing yoga. I
-         like learning as it gives us a feeling of accomplishment which, in turn, boosts our 
-         confidence in our own capabilities, you'll also feel more ready to take on challenges
-         and explore new business ventures. Acquiring new skills will unveil new opportunities 
-         and help you find innovative solutions to problems.</p>
+    <div class="grid">
+      <main>
+        <h1>Raila Oliech | WDD 130</h1>
+        <img src="images/profile.jpg" alt="Hello, my name is Raila Oliech " width="200">
+        <p>Hello! My name is Raila Oliech and I am from Nairobi, Kenya. I enjoy eating fish and
+           eggs. I'm working as the assistant clerk at Kosiga company and i love my job. When
+           I have free time, I like reading, I like all types of books, but now I´m reading about
+           health, positive psychology, spirituality and neuroscience. I also like doing yoga. I
+           like learning as it gives us a feeling of accomplishment which, in turn, boosts our 
+           confidence in our own capabilities, you'll also feel more ready to take on challenges
+           and explore new business ventures. Acquiring new skills will unveil new opportunities 
+           and help you find innovative solutions to problems.
+        </p>
 
+        <ul class="box">
 
-      <ul class="box">
-      <li><a href="https://www.churchofjesuschrist.org/temples/details/barcelona-spain-temple?lang=eng" target="_blank">barcelona-spain-temple</a></li>
-      <li><a href="https://www.churchofjesuschrist.org/temples/details/belem-brazil-temple?lang=eng" target="_blank">belem-brazil-temple</a></li>
-      <li><a href="https://www.churchofjesuschrist.org/temples/details/bangkok-thailand-temple?lang=eng" target="_blank">bangkok-thailand-temple</a></li>
-      </ul>
-    </main>
-    <aside class="box">
-      <h2>Kenya</h2>
-      <img src="images/Kenya.jpg" alt="Kenya photo">
-      <p>Kenya is located in East Africa. Its terrain rises from a low coastal plain on 
+          <li><a href="https://www.churchofjesuschrist.org/temples/details/barcelona-spain-temple?lang=eng" target="_blank">barcelona-spain-temple</a></li>
+          <li><a href="https://www.churchofjesuschrist.org/temples/details/belem-brazil-temple?lang=eng" target="_blank">belem-brazil-temple</a></li>
+          <li><a href="https://www.churchofjesuschrist.org/temples/details/bangkok-thailand-temple?lang=eng" target="_blank">bangkok-thailand-temple</a></li>
+        </ul>
+      </main>
+      <aside class="box">
+        <h2>Kenya</h2>
+        <img src="images/Kenya.jpg" alt="Kenya photo">
+        <p>Kenya is located in East Africa. Its terrain rises from a low coastal plain on 
          the Indian Ocean to mountains and plateaus at its center. Most Kenyans live in 
          the highlands, where Nairobi, the capital, sits at an altitude of 5,500 feet (1,700 meters).</p>
-    </aside>
+      </aside>
+    </div>  
     <footer>
       <p>©️2023 🌳 Raila Oliech  🌳  Nairobi, Kenya</p>
     </footer>
