--- a/wwr/about.html
+++ b/wwr/about.html
@@ -49,30 +49,36 @@
         </div>    
         <br>
         <section>
+            <h2>ADVENTURES AWAITS YOU!</h2>
+            <br>
             <figure>
-             <h2>ADVENTURES AWAITS YOU!</h2>
-             <br>
-             <div><img src="images/image1.jpg" alt="image1">
-                <figcaption>Los Dientes del Diablo  </figcaption>
-             </div>
+                <div><img src="images/image1.jpg" alt="image1">
+                    <figcaption>Los Dientes del Diablo  </figcaption>
+                </div>
+            </figure>
+            <figure>
+                <div><img src="images/image2.jpg" alt="image2">
+                    <figcaption>Racing event  </figcaption>
+                </div>
+            </figure>
+
+            <figure>
+                <div><img src="images/image3.jpg" alt="image3">
+                    <figcaption>Big Mallard  </figcaption>
+                </div>
+            </figure>
             
-             <div><img src="images/image2.jpg" alt="image2">
-                 <figcaption>Racing event  </figcaption>
-             </div>
-
-             <div><img src="images/image3.jpg" alt="image3">
-                 <figcaption>Big Mallard  </figcaption>
-             </div>
-
-             <div><img src="images/image4.jpg" alt="image4">
-                <figcaption>Los Discovery scene  </figcaption>
-             </div>
+            <figure>
+                <div><img src="images/image4.jpg" alt="image4">
+                    <figcaption>Los Discovery scene  </figcaption>
+                </div>
+            </figure>
             
-
-             <div><img src="images/image5.jpg" alt="image5">
-                 <figcaption>Half Day Adventure  </figcaption>    
-             </div>
-            </figure>            
+            <figure>
+                <div><img src="images/image5.jpg" alt="image5">
+                    <figcaption>Half Day Adventure  </figcaption>
+                </div>
+            </figure>                
         </section>
     </main>
     <footer>
