--- a/wwr/about.html
+++ b/wwr/about.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="styles/rafting.css">
   </head>
   <body>
-    <header>
+    <header class="navigation">
         <img src="images/logo.png" alt="background imaage">
         <nav>
             <a href="index.html">Home</a>
@@ -39,7 +39,7 @@
             <section>
                 <h2>HISTORY</h2>
                 <br>
-                <p>he enterprise that eventually came to be known as the Rocky Mountain base Company was established in St. 
+                <p> The enterprise that eventually came to be known as the Rocky Mountain base Company was established in St. 
                     Kosiga, Kosiga, in 2022 by James bass and Raila Oliech. Among the original employees, known 
                     as "Jmes's Hundred," were Omari Ann, who went on to take a leading role in the company's operations, 
                     and Jim Dave, who was among those who bought out Smith and his partners in 2023. It was Bridger and his 
