--- a/wwr/about.html
+++ b/wwr/about.html
@@ -13,7 +13,7 @@
   <body>
     <header>
         <img src="images/logo.png" alt="background imaage">
-        <nav class="navigation">
+        <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
             <a href="trips.html">Trips</a>
@@ -79,7 +79,7 @@
     </main>
     <footer>
         <p>© 2023 🌳 Whitewater Rafting base 🌳 Raila Oliech</p>
-        <nav class="sociallinks">
+        <div class="sociallinks">
             <a href="https://facebook.com">
             <img src="images/facebook.png" alt="Facebook">
             </a>
@@ -89,7 +89,7 @@
             <a href="https://whatsapp.com">
             <img src="images/whatsapp.png" alt="Instagram">
             </a>
-        </nav>
+        </div>
     </footer>
   </body>
 </html>  
