--- a/wwr/about.html
+++ b/wwr/about.html
@@ -52,27 +52,27 @@
             <h2>ADVENTURES AWAITS YOU!</h2>
             <br>
             <figure>
-                <div><span><img src="images/image1.jpg" alt="image1"></span></div>
+                <div><img src="images/image1.jpg" alt="image1"></div>
                      <figcaption>Los Dientes del Diablo</figcaption>
             </figure>
 
             <figure>
-                <div><span><img src="images/image2.jpg" alt="image2"></span></div>
+                <div><img src="images/image2.jpg" alt="image2"></div>
                      <figcaption>Racing event</figcaption>
             </figure>
 
             <figure>
-                <div><span><img src="images/image3.jpg" alt="image3"></span></div>
+                <div><img src="images/image3.jpg" alt="image3"></div>
                      <figcaption>Big Mallard</figcaption>
             </figure>
             
             <figure>
-                <div><span><img src="images/image4.jpg" alt="image4"></span></div>
+                <div><img src="images/image4.jpg" alt="image4"></div>
                     <figcaption>Los Discovery scene</figcaption>
             </figure>
             
             <figure>
-                <div><span><img src="images/image5.jpg" alt="image5"></span></div>
+                <div><img src="images/image5.jpg" alt="image5"></div>
                      <figcaption>Half Day Adventure</figcaption>
             </figure>                
         </section>
