--- a/quiz.html
+++ b/quiz.html
@@ -10,21 +10,39 @@
 </head>
 <body>
 <header>
-  <h1>WDD 130 | Your Name | HTML Form - User Poll</h1>
+  <h1>WDD 130 | Raila Oliech |Bacic HTML and CSS Quiz </h1>
 </header>
 <main>
     <form>
         <fieldset>
-            <label for="browser">What is your favorite internet browser?</label>
-            <textarea name="q1" id="q1"rows="3"></textarea>
+            <label for="browser">1. What is your favorite internet browser?</label>
+            <input type="text" name="qi" id="q2">
+            <br>
+            <label for="Questions">2. How are id and class attribute selected?</label>
+            <textarea name="Questions" id="Questions" cols="25" rows="3"></textarea>
+            <br>
+            <label for="css">3. Which of the following is a valid css comment</label>
+            <select name="q3" id="q3" aria-placeholder="choose one ...">
+
+                <option value="" selected disabled> choose one ...</option>
+                <option value="saf" >saf</option>
+                <option value="aie">aie</option>
+                <option value="dash">dash</option>
+                <option value="loop">loop</option>
+                <option value="random">random</option>
+            </select>
+            <br>
+            <label for="number">4. Which how many languege are there in for coding </label>
+            <input type="number" name="q4" id="q4">
         </fieldset>
+        <button type="checkbox">Submit Quiz</button>
 
 
     </form>
 
 </main>
 <footer>
-  <p>©2024 | HTML Form - User Poll Activity | Your Name</p>
+  <p>©️2023 | HTML Form | Raila</p>
 </footer>
 </body>
 </html>
