--- a/quiz.html
+++ b/quiz.html
@@ -23,7 +23,7 @@
             <input type="text" name="q1" id="q1">
         <br>
             <label for="q2">2. How are id and class attribute selected?</label>
-            <textarea name="q2" id="Questions" rows="2"></textarea>
+            <textarea name="q2" id="q2" rows="2"></textarea>
         <br>
             <label for="q3">3. Which of the following is a valid css comment</label>
             <select name="q3" id="q3" placeholder="choose one ...">
@@ -46,7 +46,7 @@
 
 </main>
 <footer>
-  <p>©️2023 | HTML Form | Raila</p>
+  <p>©️2023 | HTML and CSS Form | Raila</p>
 </footer>
 </body>
 </html>
