--- a/quiz.html
+++ b/quiz.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>WDD 130 |Bacic HTML and CSS form</title>
+  <title>WDD 130 |HTML and CSS Quiz form</title>
   <meta name="description" content="Raila Oliech BYU-Idaho coarse Quiz Page Audit page, HTML, CSS form">
   <meta name="author" content="Raila Oliech">
 
@@ -14,7 +14,7 @@
 </head>
 <body>
 <header>
-  <h1>WDD 130 | Raila Oliech |Bacic HTML and CSS Quiz </h1>
+  <h1>WDD 130 | Raila Oliech |Bacic HTML and CSS Quiz Form </h1>
 </header>
 <main>
     <form>
