--- a/quiz.html
+++ b/quiz.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 <header>
-  <h1>WDD 130 | Raila Oliech |Bacic HTML and CSS Quiz Form </h1>
+  <h1>WDD 130|Bacic HTML and CSS Form </h1>
 </header>
 <main>
     <form>
