--- a/quiz.html
+++ b/quiz.html
@@ -19,31 +19,27 @@
 <main>
     <form>
         <fieldset>
-            <label for="q1">1. What is your favorite internet browser?</label>
+            <label for="q1">1. What does the CSS stand for?</label>
             <input type="text" name="q1" id="q1">
         <br>
-            <label for="q2">2. How are id and class attribute selected?</label>
+            <label for="q2">2. Write HTML tag used to define an internal style sheet?</label>
             <textarea name="q2" id="q2" rows="2"></textarea>
         <br>
-            <label for="q3">3. Which of the following is a valid css comment</label>
+            <label for="q3">3. Which CSS property controls the text size?</label>
             <select name="q3" id="q3" placeholder="choose one ...">
 
                 <option value="" selected disabled> choose one ...</option>
-                <option value="saf" >saf</option>
-                <option value="aie">aie</option>
-                <option value="dash">dash</option>
-                <option value="loop">loop</option>
-                <option value="random">random</option>
+                <option value="saf" >tex-size</option>
+                <option value="aie">font-size</option>
+                <option value="dash">font-style</option>
+                <option value="loop">text-style</option>
             </select>
         <br>
-            <label for="q4">4. Which how many languege are there in for coding </label>
+            <label for="q4">4.  How many heading tags are there in htm </label>
             <input type="number" name="q4" id="q4">
         </fieldset>
         <button type="submit">Submit Quiz</button>
-
-
     </form>
-
 </main>
 <footer>
   <p>©️2023 | HTML and CSS Form | Raila</p>
