--- a/quiz.html
+++ b/quiz.html
@@ -26,7 +26,7 @@
             <textarea name="q2" id="q2" rows="2"></textarea>
         <br>
             <label for="q3">3. Which CSS property controls the text size?</label>
-            <select name="q3" id="q3" placeholder="choose one ...">
+            <select name="q3" id="q3">
 
                 <option value="" selected disabled> choose one ...</option>
                 <option value="saf" >tex-size</option>
