--- a/quiz.html
+++ b/quiz.html
@@ -29,10 +29,10 @@
             <select name="q3" id="q3">
 
                 <option value="" selected disabled> choose one ...</option>
-                <option value="saf" >tex-size</option>
-                <option value="aie">font-size</option>
-                <option value="dash">font-style</option>
-                <option value="loop">text-style</option>
+                <option value="tex-size" >tex-size</option>
+                <option value="font-size">font-size</option>
+                <option value="font-style">font-style</option>
+                <option value="text-style">text-style</option>
             </select>
         <br>
             <label for="q4">4.  How many heading tags are there in htm </label>
