--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -60,10 +60,10 @@
                 <input type="email" id="mail" name="user_email" placeholder="username@gmail.com" />
                 <br>
                 <br>
-                <label for="purpose">The purpose of the message</label>
-                <select name="purpose" id="purpose">
+                <label for="radio">The purpose of the message</label>
+                <select name="radio" id="radio">
                     <option value="" selected disabled> choose one ...</option>
-                    <option value="tex-size" >General Inquiry</option>
+                    <option value="General Inquiry" >General Inquiry</option>
                     <option value="font-size">Reservation Question</option>
                     <option value="font-style">Website Suggestion</option>
                 </select>
