--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -5,8 +5,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Whitewater Rafting Site Plan Contact| Raila Oliech</title>
-    <meta name="description" content="The rafting site Oliech BYU-Idaho coarse home page,  Contact Us Page.">
+    <title>Rocky Whitewater Rafting Site | Contact Us</title>
+    <meta name="description" content=" Contact Us anytime we are availale anytime.">
     <meta name="author" content="Raila Oliech">
     <link rel="stylesheet" href="styles/rafting.css">
   </head>
@@ -37,7 +37,6 @@
                  referrerpolicy="no-referrer-when-downgrade">
             </iframe>
         </div>
-        <span>
             <figure>
                 <img src="images/happy-cliants.jpg">
                 <figcaption>doctor</figcaption>
@@ -46,7 +45,6 @@
                 <img src="images/happy-cliants.jpg">
                 <figcaption>officer</figcaption>
             </figure>
-        </span>
         <div id="feedback"></div>
         <br>
         <form action="/my-handling-form-page" method="post">
@@ -71,28 +69,9 @@
             </fieldset>
             <button type="submit">Send your message</button>
         </form>
-
-
-
-
-
-        
-
-
-
-
-
-
-
-
-
-
-
-
-
-            
     </main>
     <footer>
+        <img src="https://wireframe.cc/pro/pp/7995c754b657593#1.png" alt="frame" width="700">
         <p>© 2023 🌳 Whitewater Rafting base 🌳 Raila Oliech</p>
         <div class="sociallinks">
             <a href="https://facebook.com">
