--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -38,11 +38,15 @@
             </iframe>
         </div>
             <figure>
-                <img src="images/happy-cliants.jpg">
+                <img src="images/happy-cliants.jpg" alt="m">
                 <figcaption>doctor</figcaption>
-                <img src="images/happy-cliants.jpg">
+            </figure>
+            <figure>
+                <img src="images/happy-cliants.jpg" alt="u">
                 <figcaption>james</figcaption>
-                <img src="images/happy-cliants.jpg">
+            </figure>
+            <figure>
+                <img src="images/happy-cliants.jpg" alt="r">
                 <figcaption>officer</figcaption>
             </figure>
         <div id="feedback"></div>
@@ -57,9 +61,9 @@
                 <input type="email" id="mail" name="user_email" placeholder="username@gmail.com" />
 
                 <p>Please select the purpose of the Message</p>
-                <label><input type="radio" name="purpose" id="General Inquiry" value="General Inquiry">General Inquiry</label>
-                <label><input type="radio" name="purpose" id="Reservation Question" value="Reservation Question">Reservation Question</label>
-                <label><input type="radio" name="purpose" id="Website Suggestion" value="Website Suggestion">Website</label>                                </label>
+                <label><input type="radio" name="purpose" id="General Inquiry"value="General Inquiry">General Inquiry</label>
+                <label><input type="radio" name="purpose" id="Reservation Question"value="Reservation Question">Reservation Question</label>
+                <label><input type="radio" name="purpose" id="Website Suggestion"value="Website Suggestion">Website</label>                                </label>
                 <br>
                 <label for="msg">Message:</label>
                 <textarea id="msg" name="user_message"></textarea>
