--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -29,7 +29,7 @@
         <p>Phone: +25499663377</p>
         <p>email: <a href="mailto:">rafting@gmail.com</a></p>
         <div class="map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d37300.27574355961!2d-104.89989094449847!3d38.77918873940235!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87135b588b209e41%3A0x45be10450244db86!2sSeven%20Falls!5e0!3m2!1sen!2ske!4v1684427106215!5m2!1sen!2ske" width="400"height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d37300.27574355961!2d-104.89989094449847!3d38.77918873940235!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87135b588b209e41%3A0x45be10450244db86!2sSeven%20Falls!5e0!3m2!1sen!2ske!4v1684427106215!5m2!1sen!2ske" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
             <figure>
                 <img src="images/happy-cliants.jpg" alt="m">
@@ -50,15 +50,15 @@
             <fieldset>
                 <br>
                 <label for="name">Name:</label>
-                <input type="text" id="name" name="user_name"/>
+                <input type="text" id="name" name="user_name">
                 <br>
                 <label for="mail">E-mail:</label>
-                <input type="email" id="mail" name="user_email" placeholder="username@gmail.com"/>
+                <input type="email" id="mail" name="user_email" placeholder="username@gmail.com">
 
                 <p>Please select the purpose of the Message</p>
-                <label><input type="radio" name="purpose" id="General Inquiry"value="General Inquiry">GeneralInquiry</label>
-                <label><input type="radio" name="purpose" id="Reservation Question"value="Reservation Question">ReservationQuestion</label>
-                <label><input type="radio" name="purpose" id="Website Suggestion"value="Website Suggestion">Website</label>                                </label>
+                <label><input type="radio" name="purpose" id="General Inquiry" value="General Inquiry">GeneralInquiry</label>
+                <label><input type="radio" name="purpose" id="Reservation Question" value="Reservation Question">ReservationQuestion</label>
+                <label><input type="radio" name="purpose" id="Website Suggestion" value="Website Suggestion">Website</label>                                </label>
                 <br>
                 <label for="msg">Message:</label>
                 <textarea id="msg" name="user_message"></textarea>
