--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -46,27 +46,27 @@
         <div id="feedback"></div>
         <br>
         <form action="/my-handling-form-page" method="post">
+            <h3>fill the information bellow</h3>
             <fieldset>
-                <label for="q1">1. What does the CSS stand for?</label>
-                <input type="text" name="q1" id="q1">
-            <br>
-                <label for="q2">2. Write HTML tag used to define an internal style sheet?</label>
-                <textarea name="q2" id="q2" rows="2"></textarea>
-            <br>
-                <label for="q3">3. Which CSS property controls the text size?</label>
-                <select name="q3" id="q3">
-    
-                    <option value="" selected disabled> choose one ...</option>
-                    <option value="tex-size" >tex-size</option>
-                    <option value="font-size">font-size</option>
-                    <option value="font-style">font-style</option>
-                    <option value="text-style">text-style</option>
-                </select>
-            <br>
-                <label for="q4">4.  How many heading tags are there in htm </label>
-                <input type="number" name="q4" id="q4">
+                <br>
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="user_name">
+                <br>
+                <label for="mail">E-mail:</label>
+                <input type="email" id="mail" name="user_email" placeholder="username@gmail.com">
+
+                <p>Please select the purpose of the Message</p>
+                <label><input type="radio" name="purpose" id="Inquiry" value="General Inquiry">General Inquiry</label>
+                <label><input type="radio" name="purpose" id="Question" value="Reservation Question">Reservation Question</label>
+                <label><input type="radio" name="purpose" id="Website" value="Website Suggestion">Website Suggestion</label>                                </label>
+                <br>
+                <label for="msg">Message:</label>
+                <textarea id="msg" name="user_message"></textarea>
+                <br>
+                <label for="checkbox">Please subscribe me to the monthly newsletter</label>
+                <input type="checkbox" name="checkbox" id="checkbox">
             </fieldset>
-            <button type="submit">Submit Quiz</button>
+            <button type="submit">Send your message</button>
         </form>
     </main>
     <footer>
@@ -98,3 +98,5 @@
     </script>
   </body>
 </html>  
+
+
