--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -58,7 +58,7 @@
                 <p>Please select the purpose of the Message</p>
                 <label><input type="radio" name="purpose" id="Inquiry" value="General Inquiry">General Inquiry</label>
                 <label><input type="radio" name="purpose" id="Question" value="Reservation Question">Reservation Question</label>
-                <label><input type="radio" name="purpose" id="Website" value="Website Suggestion">Website Suggestion</label>                                </label>
+                <label><input type="radio" name="purpose" id="Website" value="Website Suggestion">Website Suggestion</label>
                 <br>
                 <label for="msg">Message:</label>
                 <textarea id="msg" name="user_message"></textarea>
