--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -31,18 +31,29 @@
         <div class="map">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d37300.27574355961!2d-104.89989094449847!3d38.77918873940235!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87135b588b209e41%3A0x45be10450244db86!2sSeven%20Falls!5e0!3m2!1sen!2ske!4v1684427106215!5m2!1sen!2ske" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
-            <figure>
-                <img src="images/happy-cliants.jpg" alt="m">
-                <figcaption>doctor</figcaption>
-            </figure>
-            <figure>
-                <img src="images/happy-cliants.jpg" alt="u">
-                <figcaption>james</figcaption>
-            </figure>
-            <figure>
-                <img src="images/happy-cliants.jpg" alt="r">
-                <figcaption>officer</figcaption>
-            </figure>
+        <div class="grid-container">
+            <div class="grid-item item1">
+                <figure>
+                    <img src="images/happy-m1.jpg" alt="employee imaage">
+                    <figcaption>General</figcaption>
+                </figure>
+            </div>
+
+            <div class="grid-item item2">
+                <figure>
+                    <img src="images/happy-m2.jpg" alt="employee image">
+                    <figcaption>secretary</figcaption>
+                </figure>
+            </div>
+            <div class="grid-item item5">
+                <figure>
+                    <img src="images/happy-m4.jpg" alt="employee imaage">
+                    <figcaption>patron</figcaption>
+                </figure>    
+            </div>   
+        </div>
+
+            
         <div id="feedback"></div>
         <br>
         <form action="/my-handling-form-page" method="post">
@@ -51,7 +62,6 @@
                 <br>
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="user_name">
-                <br>
                 <label for="mail">E-mail:</label>
                 <input type="email" id="mail" name="user_email" placeholder="username@gmail.com">
 
@@ -59,10 +69,9 @@
                 <label><input type="radio" name="purpose" id="Inquiry" value="General Inquiry">General Inquiry</label>
                 <label><input type="radio" name="purpose" id="Question" value="Reservation Question">Reservation Question</label>
                 <label><input type="radio" name="purpose" id="Website" value="Website Suggestion">Website Suggestion</label>
-                <br>
                 <label for="msg">Message:</label>
+
                 <textarea id="msg" name="user_message"></textarea>
-                <br>
                 <label for="checkbox">Please subscribe me to the monthly newsletter</label>
                 <input type="checkbox" name="checkbox" id="checkbox">
             </fieldset>
@@ -70,7 +79,10 @@
         </form>
     </main>
     <footer>
-        <img src="https://wireframe.cc/pro/pp/7995c754b657593#1.png" alt="frame" width="700">
+        <br>
+        <br>
+        <h3>About Us Page Wireframe</h3>
+        <img src="images/contuct us.jpg" alt="frame" width="700">
         <p>© 2023 🌳 Whitewater Rafting base 🌳 Raila Oliech</p>
         <div class="sociallinks">
             <a href="https://facebook.com">
@@ -98,5 +110,3 @@
     </script>
   </body>
 </html>  
-
-
