--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -5,8 +5,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Contact Us</title>
-    <meta name="description" content=" Contact Us anytime we are availale anytime.">
+    <title>Rocky Mountainr Whitewater Rafting Site | Contact Us, vie +25475679899</title>
+    <meta name="description" content=" Contact Us anytime we are availale anytime.We Share Personal Interests among family, 
+    and friend to came and to enjoy adventures.">
     <meta name="author" content="Raila Oliech">
     <link rel="stylesheet" href="styles/rafting.css">
   </head>
